Cache de instruções implementada, agora vou fazer a cache de dados

--- a/src/mips_multiciclo/Frame.form
+++ b/src/mips_multiciclo/Frame.form
@@ -424,7 +424,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Ciclo a ciclo"/>
+        <Property name="text" type="java.lang.String" value="Passo a Passo"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
