--- a/src/mips_multiciclo/Frame.form
+++ b/src/mips_multiciclo/Frame.form
@@ -114,7 +114,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="URW Palladio L" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Tam. caches (Em bytes):"/>
+            <Property name="text" type="java.lang.String" value="Tamanho do &#xed;ndice:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JSlider" name="jSlider1">
